<?xml version="1.0"?>
<package format="2">
  <name>ublox_driver</name>
  <version>0.0.1</version>
  <description>Project Scorpio ublox gps driver that reads RTCM3 frames and publishes them</description>
  <maintainer email="projscorpio@todo.todo">Projekt Scorpio</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tools</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>code_coverage</test_depend>

</package>
